[gd_scene load_steps=39 format=2]

[ext_resource path="res://Assets/Textures/Interfaz de usuario/Navegacion/salir_over.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/Interfaz de usuario/Navegacion/Salir.png" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/Interfaz de usuario/Tutorial/Reck_text.png" type="Texture" id=3]
[ext_resource path="res://Assets/Font/ghaitsa_2/Ghaitsa.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Textures/Interfaz de usuario/just_color.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/Interfaz de usuario/Tutorial/Grafico_prueba_3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/Interfaz de usuario/Tutorial/siganl_3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Textures/Interfaz de usuario/Tutorial/Grafico_prueba.png" type="Texture" id=8]
[ext_resource path="res://Assets/Textures/Interfaz de usuario/Tutorial/Signal.png" type="Texture" id=9]
[ext_resource path="res://scenes/Tutorial/Code/Cuadro_dialogo.gd" type="Script" id=10]
[ext_resource path="res://Assets/Sounds/Instrucciones/Key_Board_sound.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sounds/Efectos/up_Button.ogg" type="AudioStream" id=12]
[ext_resource path="res://Assets/Sounds/Acepts/yes_Menu.mp3" type="AudioStream" id=13]
[ext_resource path="res://Assets/Sounds/Acepts/Hover_.mp3" type="AudioStream" id=14]
[ext_resource path="res://Assets/Textures/Interfaz de usuario/Tutorial/Phone_logo.png" type="Texture" id=15]
[ext_resource path="res://Assets/Textures/Interfaz de usuario/Tutorial/360grados.png" type="Texture" id=16]
[ext_resource path="res://Assets/Textures/Interfaz de usuario/Tutorial/Signal_2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Textures/Car/E_Car.png" type="Texture" id=18]
[ext_resource path="res://scenes/Recta_Transfromaciones/Plano_otros.tscn" type="PackedScene" id=19]
[ext_resource path="res://Assets/Font/Arial/Arialn.ttf" type="DynamicFontData" id=20]

[sub_resource type="Animation" id=2]
resource_name = "Anim_signal"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 20 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1788, 1089 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "up"
length = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 1788, 1089 ), Vector2( 1788, 923 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Texto"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Enter_exit"
length = 0.22
tracks/0/type = "value"
tracks/0/path = NodePath("Curtain:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Curtain:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Curtain:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Curtain:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Curtain:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Curtain:anchor_bottom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="DynamicFont" id=10]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=18]
resource_name = "Animacion_0"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("360:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Animacion_1"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Des_lizador_pendiente/ColorRect:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1000, -0.000694358, -5.63863, 0.2, 1624.13, 550, -0.1, 42.1783, 0.0133495, -5.63062 ),
"times": PoolRealArray( 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Des_lizador_pendiente/ColorRect:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 466, -0.25, 0, 0.25, 0, 464.386, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("360:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Des_lizador_pendiente/HSlider:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( -400, 64 ), Vector2( 35, 64 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Des_lizador_pendiente/HSlider:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=19]
resource_name = "Animacion_18"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("../Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "Animacion_2"
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("Des_lizador_pendiente/ColorRect:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1000, -0.000694358, -5.63863, 0.2, 1624.13, 550, -0.1, 42.1783, 0.0133495, -5.63062 ),
"times": PoolRealArray( 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Des_lizador_pendiente/ColorRect:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 466, -0.25, 0, 0.25, 0, 464.386, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("360:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 2 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Des_lizador_pendiente/HSlider:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( -400, 64 ), Vector2( 35, 64 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Des_lizador_pendiente/HSlider:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=14]
resource_name = "Animacion_3"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Des_lizador_pendiente:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -1550, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Des_lizador_pendiente:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=15]
resource_name = "Animacion_4"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Graficos/Graficos1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Animacion_5"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Graficos/GraficoPrueba2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Des_lizador_pendiente/ColorRect:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1000, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Des_lizador_pendiente/ColorRect:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 466, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Des_lizador_pendiente/HSlider:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -250, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Des_lizador_pendiente/HSlider:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 64, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath(".:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Des_lizador_pendiente:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Des_lizador_pendiente:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("Graficos/Graficos1:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 9305.45, 1, 1, 0 ) ]
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Graficos/Graficos1:modulate:a")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Graficos/Graficos1:modulate:b")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("Graficos/Graficos1:modulate:g")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("Graficos/Graficos1:modulate:r")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/13/type = "value"
tracks/13/path = NodePath("Des_lizador_pendiente/HSlider:rect_position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -400, 64 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Des_lizador_pendiente/HSlider:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Graficos/GraficoPrueba2:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("360:modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("../Control:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 10 )

[node name="Back_ground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )

[node name="Control" parent="." instance=ExtResource( 19 )]
modulate = Color( 1, 1, 1, 0 )
margin_left = 955.0
margin_top = 555.0
margin_right = 955.0
margin_bottom = 555.0

[node name="Fondo" type="TextureRect" parent="."]
margin_left = 45.0
margin_top = 767.0
margin_right = 1897.0
margin_bottom = 1025.0
texture = ExtResource( 3 )
expand = true

[node name="Imagen" type="TextureRect" parent="."]
margin_left = 45.0
margin_top = 768.0
margin_right = 301.0
margin_bottom = 1024.0
texture = ExtResource( 15 )

[node name="1" type="TextureRect" parent="Imagen"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 148.0
margin_top = 82.0
margin_right = 188.0
margin_bottom = 153.0
texture = ExtResource( 9 )

[node name="2" type="TextureRect" parent="Imagen"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 151.0
margin_top = 67.0
margin_right = 180.0
margin_bottom = 118.0
texture = ExtResource( 17 )

[node name="3" type="TextureRect" parent="Imagen"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 156.0
margin_top = 50.0
margin_right = 196.0
margin_bottom = 121.0
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Imagen"]
autoplay = "Anim_signal"
anims/Anim_signal = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_left = 318.0
margin_top = 768.0
margin_right = 1854.0
margin_bottom = 1024.0

[node name="Label" type="Label" parent="."]
margin_left = 332.0
margin_top = 778.0
margin_right = 1836.0
margin_bottom = 1008.0
custom_fonts/font = SubResource( 1 )
autowrap = true
percent_visible = 0.0

[node name="Next" type="TextureButton" parent="."]
margin_left = 1788.0
margin_top = 1089.0
margin_right = 1887.0
margin_bottom = 1187.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
flip_h = true

[node name="up_button" type="AnimationPlayer" parent="Next"]
anims/RESET = SubResource( 6 )
anims/up = SubResource( 7 )

[node name="up" type="AudioStreamPlayer" parent="Next"]
stream = ExtResource( 12 )

[node name="Hover_" type="AudioStreamPlayer" parent="Next"]
stream = ExtResource( 14 )

[node name="Enter" type="AudioStreamPlayer" parent="Next"]
stream = ExtResource( 13 )

[node name="Back" type="TextureButton" parent="Next"]
margin_left = -106.0
margin_right = -7.0
margin_bottom = 98.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="Texto" type="AnimationPlayer" parent="."]
autoplay = "Texto"
anims/RESET = SubResource( 4 )
anims/Texto = SubResource( 5 )

[node name="Sounds" type="Node2D" parent="."]

[node name="Key_board_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )

[node name="Up_Down" type="AnimationPlayer" parent="."]
anims/Enter_exit = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="Curtain" type="ColorRect" parent="."]
anchor_right = 1.0
rect_pivot_offset = Vector2( 196, 293 )
color = Color( 0, 0, 0, 1 )

[node name="Imagenes_explicacion" type="Node2D" parent="."]

[node name="Des_lizador_pendiente" type="Node2D" parent="Imagenes_explicacion"]

[node name="HSlider" type="HSlider" parent="Imagenes_explicacion/Des_lizador_pendiente"]
visible = false
margin_left = -250.0
margin_top = 64.0
margin_right = -21.0
margin_bottom = 80.0
rect_scale = Vector2( 1.5, 1.5 )
min_value = -70.0
max_value = 70.0

[node name="Label" type="Label" parent="Imagenes_explicacion/Des_lizador_pendiente/HSlider"]
margin_left = -14.0
margin_top = -24.0
margin_right = 225.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 10 )
text = "-inf         0         inf"

[node name="ColorRect" type="ColorRect" parent="Imagenes_explicacion/Des_lizador_pendiente"]
margin_left = -1000.0
margin_top = 466.0
margin_right = -34.9991
margin_bottom = 474.0
rect_pivot_offset = Vector2( 482, 5 )
color = Color( 0.12549, 0, 0.854902, 1 )

[node name="ECarLado" type="Sprite" parent="Imagenes_explicacion/Des_lizador_pendiente/ColorRect"]
position = Vector2( 472, -75 )
rotation = 0.0174533
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 18 )

[node name="Graficos" type="Node2D" parent="Imagenes_explicacion"]

[node name="Graficos1" type="Sprite" parent="Imagenes_explicacion/Graficos"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1033.75, 395 )
scale = Vector2( 0.454167, 0.371034 )
texture = ExtResource( 8 )

[node name="GraficoPrueba2" type="Sprite" parent="Imagenes_explicacion/Graficos"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1032, 394.5 )
rotation = 0.0174533
scale = Vector2( 0.454, 0.390415 )
texture = ExtResource( 6 )

[node name="360" type="Node2D" parent="Imagenes_explicacion"]
modulate = Color( 1, 1, 1, 0 )

[node name="360Grados" type="Sprite" parent="Imagenes_explicacion/360"]
modulate = Color( 0.12549, 0, 0.854902, 1 )
position = Vector2( 873, 270 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )

[node name="ECarLado2" type="Sprite" parent="Imagenes_explicacion/360"]
position = Vector2( 445, 390 )
rotation = 0.0174533
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 18 )

[node name="Animaciones_explicaciones" type="AnimationPlayer" parent="Imagenes_explicacion"]
anims/Animacion_0 = SubResource( 18 )
anims/Animacion_1 = SubResource( 11 )
anims/Animacion_18 = SubResource( 19 )
anims/Animacion_2 = SubResource( 16 )
anims/Animacion_3 = SubResource( 14 )
anims/Animacion_4 = SubResource( 15 )
anims/Animacion_5 = SubResource( 17 )
anims/RESET = SubResource( 12 )

[connection signal="mouse_entered" from="Next" to="." method="_on_Next_mouse_entered"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Next/Back" to="." method="_on_Back_pressed"]
[connection signal="animation_finished" from="Texto" to="." method="_on_Texto_animation_finished"]
[connection signal="finished" from="Sounds/Key_board_sound" to="." method="_on_Intro_0_finished"]
[connection signal="animation_finished" from="Up_Down" to="." method="_on_Up_Down_animation_finished"]
